--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angular-test-mcb": {
+    "angular-app-test": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/angular-test-mcb",
+            "outputPath": "dist/angular-app-test",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -52,6 +52,11 @@
                   "type": "initial",
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
                 }
               ]
             }
@@ -60,18 +65,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular-test-mcb:build"
+            "browserTarget": "angular-app-test:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "angular-test-mcb:build:production"
+              "browserTarget": "angular-app-test:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angular-test-mcb:build"
+            "browserTarget": "angular-app-test:build"
           }
         },
         "test": {
@@ -110,15 +115,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "angular-test-mcb:serve"
+            "devServerTarget": "angular-app-test:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "angular-test-mcb:serve:production"
+              "devServerTarget": "angular-app-test:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "angular-test-mcb"
+  "defaultProject": "angular-app-test"
 }
